# libsolv

./: pyproject.toml
.github/workflows/: test.py  wheel.yml
bindings/: solv.i
bindings/python3/: CMakeLists.txt
src/: pool.c  util.c
