[build-system]
requires = ["setuptools", "wheel", "scikit-build"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.macos]
before-all = "brew install swig"

[tool.cibuildwheel.linux]
before-all = "yum install -y make cmake swig"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux_*"
before-all = "apk add make cmake swig"

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_armv7l"
before-all = "apt-get install -y make cmake swig"
